[gd_scene load_steps=3 format=3 uid="uid://df01v7p2ep1rq"]

[ext_resource type="Script" path="res://scripts/spell.gd" id="1_vw0wj"]
[ext_resource type="Script" path="res://scripts/spell_modify.gd" id="2_l7kog"]

[node name="Spell" type="VBoxContainer"]
script = ExtResource("1_vw0wj")

[node name="Name" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Name: "

[node name="Difficulty" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Difficulty: "

[node name="KiCost" type="Label" parent="."]
layout_mode = 2
text = "Ki Cost"

[node name="AOEDamage" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "AOE:"

[node name="TempDamage" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Temp:"

[node name="TimesCast" type="Label" parent="."]
layout_mode = 2
text = "Times Cast"

[node name="ToggleInfoButton" type="Button" parent="."]
layout_mode = 2
text = "Toggle Info"

[node name="ExtraInfo" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Range" type="Label" parent="ExtraInfo"]
layout_mode = 2
text = "Range"

[node name="AOE" type="Label" parent="ExtraInfo"]
layout_mode = 2
text = "AOE"

[node name="Speed" type="Label" parent="ExtraInfo"]
layout_mode = 2
text = "Speed
"

[node name="Permanence" type="Label" parent="ExtraInfo"]
layout_mode = 2
text = "Permanence"

[node name="CastingTime" type="Label" parent="ExtraInfo"]
layout_mode = 2
text = "Casting Time"

[node name="NumElements" type="Label" parent="ExtraInfo"]
layout_mode = 2
text = "Number of Elements"

[node name="TempChange" type="Label" parent="ExtraInfo"]
layout_mode = 2
text = "Temp Change"

[node name="CastSpellButton" type="Button" parent="."]
layout_mode = 2
text = "Cast Spell"

[node name="CastModifiedButton" type="Button" parent="."]
layout_mode = 2
text = "Cast Modified"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ModifySpellPopup" type="Popup" parent="."]
title = "Modify Spell"
position = Vector2i(0, 100)
size = Vector2i(450, 450)
script = ExtResource("2_l7kog")

[node name="VBoxContainer" type="VBoxContainer" parent="ModifySpellPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2
text = "MODIFYING SPELL"
horizontal_alignment = 1

[node name="Name" type="Label" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="Range" type="HBoxContainer" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2

[node name="RangeLabel" type="Label" parent="ModifySpellPopup/VBoxContainer/Range"]
layout_mode = 2
text = "Range:"

[node name="RangeOption" type="OptionButton" parent="ModifySpellPopup/VBoxContainer/Range"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AOE" type="HBoxContainer" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2

[node name="AOELabel" type="Label" parent="ModifySpellPopup/VBoxContainer/AOE"]
layout_mode = 2
text = "AOE:
"

[node name="AOEOption" type="OptionButton" parent="ModifySpellPopup/VBoxContainer/AOE"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Speed" type="HBoxContainer" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="ModifySpellPopup/VBoxContainer/Speed"]
layout_mode = 2
text = "Speed:
"

[node name="SpeedOption" type="OptionButton" parent="ModifySpellPopup/VBoxContainer/Speed"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Permanence" type="HBoxContainer" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2

[node name="PermanenceLabel" type="Label" parent="ModifySpellPopup/VBoxContainer/Permanence"]
layout_mode = 2
text = "Permanence: 
"

[node name="PermanenceOption" type="OptionButton" parent="ModifySpellPopup/VBoxContainer/Permanence"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CastingTime" type="HBoxContainer" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2

[node name="CastingTimeLabel" type="Label" parent="ModifySpellPopup/VBoxContainer/CastingTime"]
layout_mode = 2
text = "Casting Time:
"

[node name="CastingTimeOption" type="OptionButton" parent="ModifySpellPopup/VBoxContainer/CastingTime"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NumElements" type="HBoxContainer" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2

[node name="NumElementsLabel" type="Label" parent="ModifySpellPopup/VBoxContainer/NumElements"]
layout_mode = 2
text = "Num Elements:"

[node name="NumElementsOption" type="SpinBox" parent="ModifySpellPopup/VBoxContainer/NumElements"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="TempChange" type="HBoxContainer" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2

[node name="TempChangeLabel" type="Label" parent="ModifySpellPopup/VBoxContainer/TempChange"]
layout_mode = 2
text = "Temp Change:"

[node name="TempChangeOption" type="SpinBox" parent="ModifySpellPopup/VBoxContainer/TempChange"]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true

[node name="MakeSpellButton" type="Button" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2
text = "Make Spell"

[node name="HSeparator" type="HSeparator" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2

[node name="Difficulty" type="Label" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Difficulty: "

[node name="KiCost" type="Label" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2
text = "Ki Cost"

[node name="AOEDamage" type="Label" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "AOE:"

[node name="TempDamage" type="Label" parent="ModifySpellPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Temp:"
